data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2062.wast
;; 3. **Test Description:** Implement a `block` containing a `loop` and use `br_if` incorrectly within the `block` to test label targeting.     - **Constraint Checked:** Checks for correct branching and label indexing.     - **Infinite Loop Relation:** Incorrect label targeting can cause the `br_if` to fail, resulting in a loop that never exits.

(assert_invalid
  (module (func (result i32) 
    (block (result i32) 
      (loop 
        (br_if 1 (i32.const 1)) 
        (br 0)
      ) 
    )
  ))
  "type mismatch"
)